--- a/views/author.ejs
+++ b/views/author.ejs
@@ -4,13 +4,13 @@
     This Web Site has been created by me.
 </p>
 
-<img src="/images/avatar.png" width="200" />
+<img src="/images/paula.jpg" width="200" />
 
 <hr />
 
 <div>
     <img src="/images/logos/ditupm.gif" width="8%"/>
-    <img src="/images/logos/UPM.jpog" width="8%"/>
+    <img src="/images/logos/UPM.jpg" width="8%"/>
     <img src="/images/logos/nodejs.png" width="8%"/>
     <img src="/images/logos/npm.png" width="8%"/>
     <img src="/images/logos/sequelize.png" width="8%"/>
